--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "fktan5 <email@fktan5.net>",
   "description": "Toooooou",
   "dependencies": {
+    "babel-core": "^6.7.5",
+    "babel-hubot": "^0.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.6.0",
+    "coffee-script": "^1.10.0",
     "cron": "^1.1.0",
     "hubot": "^2.18.0",
     "hubot-diagnostics": "0.0.1",
