--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-hubot": "^0.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
+    "cheerio": "^0.20.0",
     "coffee-script": "^1.10.0",
     "cron": "^1.1.0",
     "hubot": "^2.18.0",
@@ -24,6 +25,7 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
+    "request": "^2.70.0",
     "time": "^0.11.4"
   },
   "engines": {
