--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "^1.0.2",
     "hubot-maps": "0.0.2",
+    "hubot-mock-adapter": "^1.0.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.4.2",
+    "jasmine": "^2.4.1",
     "time": "^0.11.4"
   },
   "engines": {
